[package]
name = "binserde"
version = "0.1.0"
description = "A crate for serializing data structures into a binary format"
authors = ["2xsaiko <git@dblsaiko.net>"]
license = "MIT"
repository = "https://github.com/2xsaiko/mcrestool"
keywords = ["serialization", "binary"]
categories = ["encoding"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
byteorder = "1.0"
binserde_derive = { version = "=0.1.0", path = "binserde_derive" }