[package]
name = "ffmtutil"
version = "0.1.0"
authors = ["2xsaiko <git@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
byteorder = "*"
bincode = "*"
ffmtutil_derive = { path = "ffmtutil_derive" }