[package]
name = "mcrestool_logic"
version = "0.1.0"
authors = ["2xsaiko <git@dblsaiko.net>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.67"
zip = "0.5.4"
serde = "1.0.104"
serde_json = "1.0.48"

[build-dependencies]
#cbindgen = "0.13.1"
cbindgen = { git = "https://github.com/eqrion/cbindgen", rev = "fc577f2a28898b5345ed431fb172c4ede84fa2bf" }