[package]
name = "matryoshka"
version = "0.1.0"
description = "Provides a unified API for both file system access and access to ZIP archives."
authors = ["2xsaiko <git@dblsaiko.net>"]
license = "MIT"
repository = "https://github.com/2xsaiko/mcrestool"
keywords = ["zip", "archive", "filesystem"]
categories = ["filesystem"]
edition = "2018"

[dependencies]
zip = "0.5.8"
thiserror = "1.0.22"