[package]
name = "binserde_derive"
version = "0.1.3"
description = "derive implementation for binserde"
authors = ["2xsaiko <git@dblsaiko.net>"]
license = "MIT"
repository = "https://github.com/2xsaiko/mcrestool"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.10.2"
proc-macro2 = "1.0.24"

[lib]
proc-macro = true